--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ node_js:
 cache: npm
 branches:
   only:
-    - develop # build master branch only
+    - master # build master branch only
 script:
   - hexo generate # generate static files
+
 deploy:
   provider: pages
   skip-cleanup: true
@@ -17,3 +18,4 @@ deploy:
     branch: develop
   local-dir: public
   target_branch: master
+  branch: master
