--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 cache: npm
 branches:
   only:
-    - master # build master branch only
+    - develop # build master branch only
 script:
   - hexo generate # generate static files
 
@@ -15,7 +15,7 @@ deploy:
   github-token: $GH_TOKEN
   keep-history: true
   on:
-    branch: develop
+    branch: master
   local-dir: public
   target_branch: master
   branch: master
