Build branch: dev
Signed-off-by: bbvch13531 <bbvch13531@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ deploy:
   github-token: $GH_TOKEN
   keep-history: true
   on:
-    branch: master
+    branch: develop
 #  local-dir: public
   target_branch: master
   branch: master
