--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,14 @@
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
+# hexo renderer markdown - footnote
+markdown:
+  plugins:
+    - markdown-it-abbr
+    - markdown-it-footnote
+    - markdown-it-ins
+    - markdown-it-sub
+    - markdown-it-sup
 # Site
 title: Hexo
 subtitle: ''
@@ -95,8 +103,8 @@ ignore:
 ## Themes: https://hexo.io/themes/
 remote_theme: clean-blog
 theme: clean-blog
-
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: ''
+
