--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "hexo": "^4.2.0",
     "hexo-cli": "^3.1.0",
+    "hexo-footnotes": "^1.0.2",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^2.0.0",
+    "hexo-renderer-markdown-it": "^4.1.0",
     "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0"
+    "hexo-server": "^1.0.0",
+    "markdown-it-footnote": "^3.0.2"
   }
 }
