--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,18 @@
 
 # hexo renderer markdown - footnote
 markdown:
+  render:
+     breaks: true
   plugins:
     - markdown-it-abbr
     - markdown-it-footnote
     - markdown-it-ins
     - markdown-it-sub
     - markdown-it-sup
+  anchors:
+    level: 2
+    collisionSuffix: ''
+    permalink: false
 # Site
 title: Hexo
 subtitle: ''
@@ -89,7 +95,7 @@ use_date_for_updated: false
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 20
 pagination_dir: page
 
 # Include / Exclude file(s)
