--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ markdown:
     collisionSuffix: ''
     permalink: false
 # Site
-title: Hexo
+title: bbvch13531
 subtitle: ''
 description: ''
 keywords:
@@ -29,7 +29,7 @@ timezone: ''
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yoursite.com
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :year/:month/:day/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -55,7 +55,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: true
+post_asset_folder: false
 relative_link: false
 future: true
 highlight:
