--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ keywords:
 author: Kyungyoung Heo
 language: kr
 timezone: ''
+menu_title:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
