--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ menu_title:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yoursite.com
 root: /
-permalink: :year:month:day-post_title
+permalink: :year-:month-:day-:post_title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
