--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ markdown:
     collisionSuffix: ''
     permalink: false
 # Site
-title: 'bbvch13531'
+title: '0xky blog'
 subtitle: 'The scene of the day'
 description: ''
 keywords:
-author: Kyungyoung Heo
+author: KY
 language: kr
-timezone: ''
+timezone: KR
 menu_title:
 
 # URL
