--- a/themes/clean-blog/_config.yml
+++ b/themes/clean-blog/_config.yml
@@ -8,6 +8,10 @@ menu:
     url: https://github.com/bbvch13531
     icon: github
 
+Site:
+  title: 0xky's blog
+  author: ky
+  timezone: KR
 # Title on top left of menu. Leave empty to use main blog title
 menu_title: Configurable Title
 
@@ -20,12 +24,12 @@ default_post_title: Untitled
 # Comments. Choose one by filling up the information
 comments:
   # Disqus comments
-  disqus_shortname:
+  # disqus_shortname:
   # Facebook comments
-  facebook:
-    appid:
-    comment_count: 5
-    comment_colorscheme: light
+  # facebook:
+  #   appid:
+  #   comment_count: 5
+  #   comment_colorscheme: light
 
 # Google Analytics Tracking ID
 google_analytics:
@@ -37,7 +41,7 @@ addthis:
 favicon: /img/favicon32.png
 
 # Social Accounts
-twitter_url:
+twitter_url: https://twitter.com/bbvch13531
 twitter_handle:
 facebook_url:
 github_url: https://github.com/bbvch13531
