update github action
Signed-off-by: Kyungyoung Heo <bbvch13531@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ menu_title:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://0xky.net
 root: /
 permalink: :year-:month-:day-:title/
 permalink_defaults:
@@ -118,5 +118,4 @@ theme: clean-blog
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
-
+  - type: ''
