--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo": "^4.2.1",
     "hexo-asset-link": "^2.0.1",
     "hexo-cli": "^3.1.0",
+    "hexo-deployer-git": "^4.0.0",
     "hexo-footnotes": "^1.0.2",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
